# SPN4RE-NEREL

./: .gitignore  README.md  config.py  main.py  pyproject.toml
models/: matcher.py  seq_encoder.py  set_criterion.py  set_decoder.py  setpred4RE.py
scripts/: generate_data.py
trainer/: trainer.py
utils/: alphabet.py  average_meter.py  data.py  functions.py  metric.py
